--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:inputType="textMultiLine|textNoSuggestions"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:maxLines="1000"
+        android:scrollHorizontally="false"
+        android:freezesText="true" />
         
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,7 +89,8 @@
                 android:textSize="12sp"
                 android:fontFamily="monospace"
                 android:text="Generated Output..." 
-                android:textColor="#0000AA"/>
+                android:textColor="#0000AA"
+                android:freezesText="true" />
         </ScrollView>
 
         <TextView
@@ -109,7 +113,8 @@
                 android:textSize="12sp"
                 android:fontFamily="monospace"
                 android:text="Original Hex will appear here..." 
-                android:textColor="#005500"/>
+                android:textColor="#005500"
+                android:freezesText="true" />
         </ScrollView>
     </LinearLayout>
 
