--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- Deep Blue Primary -->
+    <color name="primary">#1A237E</color>
+    <color name="primary_variant">#000051</color>
+    <color name="on_primary">#FFFFFF</color>
+
+    <!-- Amber Accent for Assembly Feeling -->
+    <color name="accent">#FFC107</color>
+    <color name="on_accent">#000000</color>
+
+    <!-- Surfaces and Backgrounds -->
+    <color name="background">#F5F5F5</color>
+    <color name="surface">#FFFFFF</color>
+    <color name="error">#B00020</color>
+    
+    <!-- Syntax Highlighting -->
+    <color name="syntax_mnemonic">#0D47A1</color>
+    <color name="syntax_label">#7B1FA2</color>
+    <color name="syntax_directive">#00695C</color>
+    <color name="syntax_comment">#757575</color>
+    <color name="syntax_number">#E65100</color>
+    
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
