--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,23 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <menu>
-        <item
-            android:id="@+id/action_save"
-            android:title="@string/menu_save"
-            android:icon="@android:drawable/ic_menu_save"
-            app:showAsAction="ifRoom" />
-        <item
-            android:id="@+id/action_about"
-            android:title="@string/menu_about"
-            app:showAsAction="never" />
-        <item
-            android:id="@+id/action_licenses"
-            android:title="@string/menu_licenses"
-            app:showAsAction="never" />
-        <item
-            android:id="@+id/action_privacy"
-            android:title="@string/menu_privacy"
-            app:showAsAction="never" />
-    </menu>
-</resources>
+    <item
+        android:id="@+id/action_save"
+        android:title="@string/menu_save"
+        android:icon="@android:drawable/ic_menu_save"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_about"
+        android:title="@string/menu_about"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_licenses"
+        android:title="@string/menu_licenses"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_privacy"
+        android:title="@string/menu_privacy"
+        app:showAsAction="never" />
+</menu>
