--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,55 +23,16 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:id="@+id/quick_actions"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="4dp"
             android:background="@color/primary_variant"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/btnExport"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btn_export"
-                android:textColor="@color/on_primary"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btnShare"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btn_share"
-                android:textColor="@color/on_primary"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btnDocs"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btn_docs"
-                android:textColor="@color/on_primary"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btnWebSim"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btn_web_sim"
-                android:textColor="@color/on_primary"
-                android:textSize="12sp" />
-        </LinearLayout>
+            app:tabTextColor="@color/on_primary"
+            app:tabSelectedTextColor="@color/accent"
+            app:tabIndicatorColor="@color/accent"
+            app:tabMode="scrollable"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvStatus"
@@ -83,7 +44,7 @@
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/quick_actions"
+            app:layout_constraintTop_toBottomOf="@id/tabLayout"
             tools:text="Mensaje de estado"
             tools:visibility="visible" />
 
@@ -99,6 +60,7 @@
             android:padding="12dp"
             android:scrollbars="vertical"
             android:textSize="14sp"
+            android:textColor="@color/on_surface"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvStatus" />
 
