--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
 
     <!-- Surfaces and Backgrounds -->
     <color name="background">#F5F5F5</color>
+    <color name="on_background">#000000</color>
     <color name="surface">#FFFFFF</color>
+    <color name="on_surface">#000000</color>
     <color name="error">#B00020</color>
     
     <!-- Syntax Highlighting -->
