--- a/app/src/main/res/layout/popup_hex.xml
+++ b/app/src/main/res/layout/popup_hex.xml
@@ -53,14 +53,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="end"
+                android:gravity="center"
                 android:paddingTop="8dp">
 
                 <Button
                     android:id="@+id/btnExportPopup"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="6dp"
                     android:text="@string/btn_export_popup"
                     app:icon="@android:drawable/ic_menu_save"
                     style="@style/Widget.MaterialComponents.Button"
@@ -68,18 +69,22 @@
                     android:textColor="@color/on_accent"
                     android:minHeight="48dp"
                     android:insetTop="0dp"
-                    android:insetBottom="0dp"/>
+                    android:insetBottom="0dp"
+                    android:textAllCaps="false"/>
 
                 <Button
                     android:id="@+id/btnClosePopup"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="6dp"
                     android:text="@string/btn_close"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:textColor="@color/primary"
                     android:minHeight="48dp"
                     android:insetTop="0dp"
-                    android:insetBottom="0dp"/>
+                    android:insetBottom="0dp"
+                    android:textAllCaps="false"/>
             </LinearLayout>
 
         </LinearLayout>
