--- a/app/src/main/res/layout/popup_hex.xml
+++ b/app/src/main/res/layout/popup_hex.xml
@@ -70,7 +70,8 @@
                     android:minHeight="48dp"
                     android:insetTop="0dp"
                     android:insetBottom="0dp"
-                    android:textAllCaps="false"/>
+                    android:textAllCaps="false"
+                    android:textSize="13sp"/>
 
                 <Button
                     android:id="@+id/btnClosePopup"
@@ -84,7 +85,8 @@
                     android:minHeight="48dp"
                     android:insetTop="0dp"
                     android:insetBottom="0dp"
-                    android:textAllCaps="false"/>
+                    android:textAllCaps="false"
+                    android:textSize="13sp"/>
             </LinearLayout>
 
         </LinearLayout>
