--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,12 +8,7 @@
     <item
         android:id="@+id/action_open"
         android:title="Abrir"
-        android:icon="@android:drawable/ic_menu_view"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_save"
-        android:title="@string/menu_save"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@android:drawable/ic_menu_upload"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_about"
