--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,13 +8,12 @@
     <item
         android:id="@+id/action_open"
         android:title="Abrir"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@android:drawable/ic_menu_upload"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_save"
-        android:title="@string/menu_save"
-        android:icon="@android:drawable/ic_menu_save"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/action_project_info"
+        android:title="@string/menu_project_info"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_about"
         android:title="@string/menu_about"
